Adicionando informações ao notebook 1

--- a/assignment-1/lol_challenger_ranked.ipynb
+++ b/assignment-1/lol_challenger_ranked.ipynb
@@ -17,7 +17,39 @@
     "id": "6eA9t9gXDMyJ"
    },
    "source": [
-    "League of Legends (LoL) é um jogo multiplayer, modo arena de batalha, desenvolvido pela empresa Riot Games, onde o objetivo final é destruir a base inimiga e conquistar a vitória. Os meios de se sobrepor perante o inimigo e triunfar no campo de batalha são diversos e o jogo acaba por se tornar uma mistura entre habilidade individual e estratégia"
+    "## Um pouco sobre o league of legends e sobre este notebook\n",
+    "\n",
+    "League of Legends (LoL) é um jogo multiplayer, modo arena de batalha, desenvolvido pela empresa Riot Games, onde o objetivo final é destruir a base inimiga. O mapa contém diversos objetivos que podem vatagens aos que os fizerem, como:\n",
+    "\n",
+    "- **Tropas:** Tropas são unidades associadas a um dos times controladas pelo computador. Elas surgem periodicamente do próprio nexus e avançam pelas rotas em direção ao nexus inimigo. As tropas inimigas garantem ouro ao jogador que a abateu.\n",
+    "\n",
+    "- **Dragões, Rubrivira (Red/Vermelho), Azuporã (Blue/Azul) e Barão Nashor:** Ficam situados na Jungle e garantem buffs nos status e experiência de nível quando que o abatidos.\n",
+    "\n",
+    "- **Trevoguari (Lobos),  Grompe (Sapão), Acuâmina (Galinha) e Krugues (Pedras):** Ficam situados na Jungle e garantem experiência de nível quando abatidos.\n",
+    "\n",
+    "- **Aronguejo (Caranguejo):** Ficam situados nos rios e garantem experiência de nível e visão no mapa quando abatidos.\n",
+    "\n",
+    "- **Torres:** Liberam um espaço na rota até o nexus inimigo quando destruida.\n",
+    "\n",
+    "- **Inibitor:** Quando destruida libera minnions inimigos mais poderosos na rota a qual esse inibidor era responsável.\n",
+    "\n",
+    "- **Nexus:** Garante a vitória ao time que o destroiu.\n",
+    "\n",
+    "Além disso o jogo conta com mais de 160 personagens jogáveis, cada um com um kit de habilidades diferente e status base unicos, e as partidas contam com 10 jogadores simultâneos, sendo 5 do time azul e cinco do time vermelho, cada um com uma função pré definida e responsável por defender uma área do mapa.\n",
+    "\n",
+    "**Representação do minimapa com as principais localizações:**\n",
+    "![alt text](https://s2.glbimg.com/7YyoN-q2hqslIYiSD5I_aWrmXlE=/0x0:1600x1337/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2018/j/U/wOtnlBRQOqIM2D4UZnqQ/mapa1-marca.jpg \"Logo Title Text 1\")\n",
+    "\n",
+    "\n",
+    "O jogo também tem um sistema de rankeamento baseado em divisões e de pontos (Chamados de pontos de liga ou PDL). Os pontos de liga são distribuídos aos jogadores de forma que eles ganham PDL caso vençam e perdem PDL caso percam a partida. Os três primeiros divisões são:\n",
+    "\n",
+    "- Desafiante (Challenger)\n",
+    "- Grão Mestre (Grand Master)\n",
+    "- Mestre (Master)\n",
+    "\n",
+    "Os meios de se sobrepor perante o inimigo e triunfar no campo de batalha são diversos e o jogo acaba por se tornar uma mistura entre habilidade individual e estratégia!\n",
+    "\n",
+    "Neste notebook estaremos realizando uma análise focada nos quesitos estratégicos nos rankings mais altos do jogo para descobrir quais são os fatores mais impactantes em uma partida para garantir a vitória!"
    ]
   },
   {
@@ -136,6 +168,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O dataset escolhido por nós contêm informações de partidas das três principais divisões."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
@@ -148,6 +187,13 @@
     "c_df = pd.read_csv(f'{DATAPATH}/Challenger_Ranked_Games.csv')\n",
     "gm_df = pd.read_csv(f'{DATAPATH}/GrandMaster_Ranked_Games.csv')\n",
     "m_df = pd.read_csv(f'{DATAPATH}/Master_Ranked_Games.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preferimos por unificar os três datasets em um só e criar uma nova coluna apenas com o Elo de cada partida"
    ]
   },
   {
@@ -194,6 +240,13 @@
     "\n",
     "df = pd.concat(frames)\n",
     "df.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Foi necessário também criar uma nova coluna com a duração das partidas em minutos para que pudessemos realizar as analises que desejávamos"
    ]
   },
   {
@@ -258,6 +311,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Barão antes dos 20?\n",
+    "\n",
+    "Descobrimos dados errôneos nas colunas referentes ao objetivo \"Barão\", uma vez que tinham partidas de menos de 20 minutos de duração que já tinham barons abatidos e em uma partida comum ele só aparece no mapa e fica disponível para ser abatido depois dos 20 minutos de partida.\n",
+    "\n",
+    "Logo tivemos que deletar as linhams que continham essas informações."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
@@ -292,6 +356,18 @@
     "red_baron_kills = np.logical_and(df['gameDurationMins'] < 20, df['redBaronKills'] == 1).sum()\n",
     "\n",
     "print(blue_f_baron, red_f_baron, blue_baron_kills, red_baron_kills)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Legenda sobre os nomes das colunas\n",
+    "\n",
+    "- **GameId:** Número único atrelado a toda a partida de League of Legends\n",
+    "- **Ranking:** Divisão (ELO) da partida\n",
+    "- **gameDuration:** Duração da partida em segundos\n",
+    "- **gameDurationMins:** Duração da partida em minutos"
    ]
   },
   {
@@ -765,6 +841,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quantidade de partidas por elo no dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -892,6 +975,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Duração de partidas agrupadas por ELO\n",
+    "\n",
+    "Uma informação interessante que encontramos analisando esse gráfico foi que nos minutos 15, 20 e 30 houve um pico de términos nas partidas.\n",
+    "\n",
+    "Isso pode se dar pelo fato de que os minutos 15 e 20 são os que liberam a possibilidade de se render e declarar automaticamente a vitória para o time inimigo, para tal, caso um time inicie a votação para se render entre o minuto 15 e o minuto 20 é necessário que todos do time votem a favor, a partir do minuto 20 é necessário apenas que 4 dos cinco jogadores do time que iniciou a votação concordem com a rendição."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -962,6 +1056,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verificando a porcentagem de vitória por lado do mapa"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -1011,6 +1112,15 @@
     "\n",
     "for col in columns:\n",
     "    df[col]= df[col].map(win_mapping)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verificando a quantidade de vitórias por lado do mapa\n",
+    "\n",
+    "Aqui podemos mais uma vez ver a ligeira vantagem do time vermelho para a conquista da vitória em Summoners Rift."
    ]
   },
   {
@@ -1549,6 +1659,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conquista de vantagem em expepriência e nível é um fator impactante para vitória?\n",
+    "\n",
+    "No league of legends ao entrar na partida seu personagem começa no nível 1 e pode chegar até o nível 18 ganhando experiência pelo mapa. \n",
+    "\n",
+    "O nível é um fator importante para a vitória uma vez que ele libera pontos de skills, liberando para o seu personagem novas habilidades e fazendo as habilidades já existentes ficarem mais fortes.\n",
+    "\n",
+    "Como podemos podemos ver os times que coletaram mais experiência com o passar do tempo conquistaram mais vitórias.\n",
+    "\n",
+    "Neste gráfico não estamos comparando o nível médio dos dois lados em uma mesma partida mas comparando com outras partidas do mesmo lado.\n",
+    "\n",
+    "### Analisando o fator nível com as vitórias e derrotas do lado azul com o passar do tempo  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
@@ -1621,6 +1748,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analisando o fator nível com as vitórias e derrotas do lado vermelho com o passar do tempo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
@@ -1688,6 +1822,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baron, um objetivo game changing\n",
+    "\n",
+    "O baron é um objetivo no mapa que quando abatido por um time concede a todos os seus membros 300 de ouro, buffs por 3 minutos nos status de todos os personagens do time e fortalece todas as tropas próximas aos personagens do time ao longo do mapa.\n",
+    "Queríamos verificar a taxa de efetividade que esse objetivo tinha nas vitórias, uma vez conquistado, pois esse objetivo é conhecido na comunidade como um objetivo que pode virar partidas ou garantir aquelas partidas que estão equilibradas, tendo em vista a força dos buffs que este objetivo entrega.\n",
+    "\n",
+    "### Análise no lado azul"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
@@ -1750,6 +1896,13 @@
    "source": [
     "red_f_baron = df.groupby('redFirstBaron')['redWins'].value_counts()\n",
     "red_f_baron"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Análise no lado vermelho"
    ]
   },
   {
