Adicionando informações ao notebook 2

--- a/assignment-1/lol_challenger_ranked.ipynb
+++ b/assignment-1/lol_challenger_ranked.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "League of Legends (LoL) é um jogo multiplayer, modo arena de batalha, desenvolvido pela empresa Riot Games, onde o objetivo final é destruir a base inimiga. O mapa contém diversos objetivos que podem vatagens aos que os fizerem, como:\n",
     "\n",
-    "- **Tropas:** Tropas são unidades associadas a um dos times controladas pelo computador. Elas surgem periodicamente do próprio nexus e avançam pelas rotas em direção ao nexus inimigo. As tropas inimigas garantem ouro ao jogador que a abateu.\n",
+    "- **Tropas (Minnions):** Tropas são unidades associadas a um dos times controladas pelo computador. Elas surgem periodicamente do próprio nexus e avançam pelas rotas em direção ao nexus inimigo. As tropas inimigas garantem ouro ao jogador que a abateu.\n",
     "\n",
-    "- **Dragões, Rubrivira (Red/Vermelho), Azuporã (Blue/Azul) e Barão Nashor:** Ficam situados na Jungle e garantem buffs nos status e experiência de nível quando que o abatidos.\n",
+    "- **Dragões, Rubrivira (Red/Vermelho), Azuporã (Blue/Azul) e Barão (Baron Nashor):** Ficam situados na Jungle e garantem buffs nos status e experiência de nível quando que o abatidos.\n",
     "\n",
     "- **Trevoguari (Lobos),  Grompe (Sapão), Acuâmina (Galinha) e Krugues (Pedras):** Ficam situados na Jungle e garantem experiência de nível quando abatidos.\n",
     "\n",
@@ -367,7 +367,60 @@
     "- **GameId:** Número único atrelado a toda a partida de League of Legends\n",
     "- **Ranking:** Divisão (ELO) da partida\n",
     "- **gameDuration:** Duração da partida em segundos\n",
-    "- **gameDurationMins:** Duração da partida em minutos"
+    "- **gameDurationMins:** Duração da partida em minutos\n",
+    "---------------------------------------\n",
+    "#### Dados sobre o time azul\n",
+    "- **blueWins:** Registra se a partida foi vitória ou derrota para o time azul(Derrota = 0, Vitória = 1), posteriormente alteramos para Win e Defeat.\n",
+    "- **blueFirstBlood:** Registra se o time azul matou o primeiro inimigo na partida.\n",
+    "- **blueFirstTower:** Registra se o time azul destruiu a primeira torre na partida.\n",
+    "- **blueFirstBaron:** Registra se o time azul abateu o primeiro Baron Nashor na partida.\n",
+    "- **blueFirstDragon:** Registra se o time azul abateu o primeiro Dragão na partida.\n",
+    "- **blueFirstInhibitor:** Registra se o time azul abateu o primeiro inibidor na partida.\n",
+    "- **blueDragonKills:** Contabiliza quantos dragões foram abatidos pelo time azul.\n",
+    "- **blueBaronKills:** Contabiliza quantos Barons Nashor foram abatidos pelo time azul.\n",
+    "- **blueTowerKills:** Contabiliza quantas torres foram destruidas pelo time azul.\n",
+    "- **blueInhibitorKills:** Contabiliza quantos inibidores foram destruidas pelo time azul.\n",
+    "- **blueWardPlaced:** Contabiliza quantas sentinelas foram colocadas pelo time azul.\n",
+    "- **blueWardkills:** Contabiliza quantas sentinelas inimigas foram destruidas pelo time azul.\n",
+    "- **blueKills:** Contabiliza quantos inimigos foram abatidos pelo time azul.\n",
+    "- **blueDeath:** Contabiliza quantos aliados do time azul foram mortos.\n",
+    "- **blueAssist:** Contabiliza quantas assistencias (colaborações para abates de inimigos) do time azul ocorreram.\n",
+    "- **blueChampionDamageDealt:** Contabiliza o total de dano causado a campeões inimigos pelo time azul.\n",
+    "- **blueTotalGold:** Contabiliza o total de ouro adquirido pelo time azul.\n",
+    "- **blueTotalMinionKills:** Contabiliza o total de tropas abatidas pelo time azul.\n",
+    "- **blueTotalLevel:** Contabiliza o total de níveis conquistados pelo time azul.\n",
+    "- **blueAvgLevel:** Contabiliza a média de níveis conquistados pelo time azul.\n",
+    "- **blueJungleMinionKills:** Contabiliza os (objetivos+tropas) abatidos pelo Jungle time azul.\n",
+    "- **blueKillingSpree:** Contabiliza a ocorrência de killingSpree (Quando um jogador mata 3 inimigos ao logo da partida sem morrer) do time azul.\n",
+    "- **blueTotalHeal:** Contabiliza o total de vida curada pelo time azul.\n",
+    "- **blueObjectDamageDealt:** Contabiliza o total de dano causado a estruturas (Torres, inibidores e nexus) pelo time azul.\n",
+    "---------------------------------------\n",
+    "#### Dados sobre o time vermelho\n",
+    "\n",
+    "- **redWins:** Registra se a partida foi vitória ou derrota para o time vermelho (Derrota = 0, Vitória = 1), posteriormente alteramos para Win e Defeat\n",
+    "- **redFirstBlood:** Registra se o time vermelho matou o primeiro inimigo na partida.\n",
+    "- **redFirstTower:** Registra se o time vermelho destruiu a primeira torre na partida.\n",
+    "- **redFirstBaron:** Registra se o time vermelho abateu o primeiro Baron Nashor na partida.\n",
+    "- **redFirstDragon:** Registra se o time vermelho abateu o primeiro Dragão na partida.\n",
+    "- **redFirstInhibitor:** Registra se o time vermelho abateu o primeiro inibidor na partida.\n",
+    "- **redDragonKills:** Contabiliza quantos dragões foram abatidos pelo time vermelho.\n",
+    "- **redBaronKills:** Contabiliza quantos Barons Nashor foram abatidos pelo time vermelho.\n",
+    "- **redTowerKills:** Contabiliza quantas torres foram destruidas pelo time vermelho.\n",
+    "- **redInhibitorKills:** Contabiliza quantos inibidores foram destruidas pelo time vermelho.\n",
+    "- **redWardPlaced:** Contabiliza quantas sentinelas foram colocadas pelo time vermelho.\n",
+    "- **redWardkills:** Contabiliza quantas sentinelas inimigas foram destruidas pelo time vermelho.\n",
+    "- **redKills:** Contabiliza quantos inimigos foram abatidos pelo time vermelho.\n",
+    "- **redDeath:** Contabiliza quantos aliados do time vermelho foram mortos.\n",
+    "- **redAssist:** Contabiliza quantas assistencias (colaborações para abates de inimigos) do time vermelho ocorreram.\n",
+    "- **redChampionDamageDealt:** Contabiliza o total de dano causado a campeões inimigos pelo time vermelho.\n",
+    "- **redTotalGold:** Contabiliza o total de ouro adquirido pelo time vermelho.\n",
+    "- **redTotalMinionKills:** Contabiliza o total de tropas abatidas pelo time vermelho.\n",
+    "- **redTotalLevel:** Contabiliza o total de níveis conquistados pelo time vermelho.\n",
+    "- **redAvgLevel:** Contabiliza a média de níveis conquistados pelo time vermelho.\n",
+    "- **redJungleMinionKills:** Contabiliza os (objetivos+tropas) abatidos pelo Jungle time vermelho.\n",
+    "- **redKillingSpree:** Contabiliza a ocorrência de killingSpree (Quando um jogador mata 3 inimigos ao logo da partida sem morrer) do time vermelho.\n",
+    "- **redTotalHeal:** Contabiliza o total de vida curada pelo time vermelho.\n",
+    "- **redObjectDamageDealt:** Contabiliza o total de dano causado a estruturas (Torres, inibidores e nexus) pelo time vermelho.\n"
    ]
   },
   {
