Adicionando informações ao notebook 4

--- a/assignment-1/lol_challenger_ranked.ipynb
+++ b/assignment-1/lol_challenger_ranked.ipynb
@@ -7,6 +7,8 @@
     "id": "Lc0J9SG6nzb4"
    },
    "source": [
+    "Membros da equipe: Ricardo Cavalcante (377744), Tales Araujo dos Santos (374953)\n",
+    "\n",
     "Source: https://www.kaggle.com/gyejr95/league-of-legends-challenger-ranked-games2020"
    ]
   },
@@ -1725,7 +1727,7 @@
     "\n",
     "Neste gráfico não estamos comparando o nível médio dos dois lados em uma mesma partida mas comparando com outras partidas do mesmo lado.\n",
     "\n",
-    "### Analisando o fator nível com as vitórias e derrotas do lado azul com o passar do tempo  "
+    "### Analisando o fator \"nível\" com as vitórias e derrotas do lado azul com o passar do tempo  "
    ]
   },
   {
@@ -1804,7 +1806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analisando o fator nível com as vitórias e derrotas do lado vermelho com o passar do tempo"
+    "### Analisando o fator \"nível\" com as vitórias e derrotas do lado vermelho com o passar do tempo"
    ]
   },
   {
