Adicionando informações ao notebook 5

--- a/assignment-1/lol_challenger_ranked.ipynb
+++ b/assignment-1/lol_challenger_ranked.ipynb
@@ -7,7 +7,7 @@
     "id": "Lc0J9SG6nzb4"
    },
    "source": [
-    "Membros da equipe: Ricardo Cavalcante (377744), Tales Araujo dos Santos (374953)\n",
+    "**Membros da equipe:** Ricardo Cavalcante (377744), Tales Araujo dos Santos (374953)\n",
     "\n",
     "Source: https://www.kaggle.com/gyejr95/league-of-legends-challenger-ranked-games2020"
    ]
@@ -320,7 +320,7 @@
     "\n",
     "Descobrimos dados errôneos nas colunas referentes ao objetivo \"Barão\", uma vez que tinham partidas de menos de 20 minutos de duração que já tinham barons abatidos e em uma partida comum ele só aparece no mapa e fica disponível para ser abatido depois dos 20 minutos de partida.\n",
     "\n",
-    "Logo tivemos que deletar as linhams que continham essas informações."
+    "Logo tivemos que deletar as linhas que continham essas informações."
    ]
   },
   {
