--- a/assignment-1/lol_challenger_ranked.ipynb
+++ b/assignment-1/lol_challenger_ranked.ipynb
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 206,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
        "2  94833.778555        998.699493  "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1961,7 @@
        "2          0.350000  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,16 +1978,24 @@
     "mean_df = info_by_rank[individual_att_columns]\n",
     "\n",
     "# Scaling all the features\n",
-    "info_by_rank_scaled = pd.DataFrame((mean_df.values - min_df.values)/(max_df.values - min_df.values), \n",
-    "                                   columns=individual_att_columns)\n",
+    "scaled = (mean_df.values - min_df.values)/(max_df.values - min_df.values)\n",
+    "\n",
+    "info_by_rank_scaled = pd.DataFrame(scaled, columns=individual_att_columns)\n",
     "info_by_rank_scaled.insert(loc=0, column='ranking', value=info_by_rank['ranking'])\n",
     "\n",
     "info_by_rank_scaled"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos plotar um gráfico para visualizar esses atributos um ao lado do outro:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -2044,6 +2052,13 @@
     "plt.legend(loc='upper right', bbox_to_anchor=(0.1, 0.1))\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A disposição de dados é diferente para cada *ranking*, mas difere mais sobre o número de tropas abatidas (*minionKills*) e do total de ouro adquirido. Quanto maior o ranking, maior estes atributos nas partidas analisadas. Os outros atributos parecem ser indiferentes quanto ao nível da partida."
    ]
   },
   {
